@@ -4,12 +4,9 @@ gem 'rails', '3.1.1'
 
 # Database Adapter
 gem 'mysql2', '0.3.7',                    :platforms => [:ruby]
-gem 'sqlite3',                            :platforms => [:mswin, :mingw]
-# gem 'mongrel', '>= 1.2.0.pre2', :platforms => [:mswin, :mingw]  # Mongrel no longer supported, development stopped
-# http://unicornless.com/systems-administration/run-thin-as-windows-service
+gem 'pg',                                 :platforms => [:mswin, :mingw]
 gem 'thin', '~> 1.2.11',                  :platforms => [:mswin, :mingw]
 gem 'eventmachine', '~> 1.0.0.beta.4.1',  :platforms => [:mswin, :mingw]
-
 
 # Gems used by project
 gem 'carrierwave'                  # File Uploads
@@ -20,12 +17,6 @@ gem 'omniauth',   '0.2.6'          # User Multi-Authentication
 gem 'kaminari'                     # Pagination
 gem 'systemu', '~> 2.2.0'          # Running Ocra system command
 gem 'ocra', :platforms => [:mingw]
-gem 'rubytorrent-allspice'         # RubyTorrent library
-
-# For announce portion of application.
-gem 'ruby-tracker', :git => 'git://github.com/shaggyone/ruby-tracker.git'
-gem 'bencode', :git => 'git://github.com/shaggyone/ruby-bencode.git'
-gem 'bencoded-record', :git => 'git://github.com/shaggyone/bencoded-record.git'
 
 # Gems used only for assets and not required
 # in production environments by default.
