@@ -1,64 +1,0 @@
-<% if user_signed_in? -%>
-  <div style="float:right">
-    <%= link_to_function current_user.name, "$('#menu_user_settings').show();", :onmouseover => "$('#menu_user_settings').show();" %>
-    <div style="position:relative">
-      <div id="menu_user_settings" class="menu_dropdown_right" style="display:none">
-        <div style="white-space:nowrap"><%= current_user.name %></div>
-        <div class="quiet small"><%= current_user.email %></div>
-        <div><%= link_to 'Settings', settings_path %></div>
-        <div><%= link_to 'Authentications', authentications_path %></div>
-        <hr>
-        <div><%= link_to 'Logout', destroy_user_session_path %></div>
-      </div>
-    </div>
-  </div>
-
-  <div style="float:left">
-    <%= link_to_function 'Home', "$('#menu_home').show();", :onmouseover => "$('#menu_home').show();" %>
-    <div style="position:relative;">
-      <div id="menu_home" class="menu_dropdown_left" style="display:none">
-        <div><%= link_to 'Home', root_path %></div>
-<% if false %>        <div><%= link_to '&raquo;New'.html_safe, root_path %></div><% end %>
-        <hr>
-        <div><%= link_to 'About', about_path %></div>
-      </div>
-    </div>
-  </div>
-  
-  <div style="float:left">
-    <%= link_to_function 'Users', "$('#menu_users').show();", :onmouseover => "$('#menu_users').show();" %>
-    <div style="position:relative;">
-      <div id="menu_users" class="menu_dropdown_left_center" style="display:none">
-        <div><%= link_to 'Users', users_path %></div>
-      </div>
-    </div>
-  </div>
-
-  <%= javascript_tag "hideOnMouseOut(['#menu_user_settings', '#menu_home', '#menu_users']);" %>
-<% else %>
-  <div style="float:right" onmouseover="$('#menu_user_settings').show();">
-    <%= link_to_function 'Login', "$('#menu_user_settings').show();" %>
-    <div style="position:relative">
-      <div id="menu_user_settings" class="menu_dropdown_right" style="display:none">
-        <div><%= link_to 'Login', new_user_session_path %></div>
-        <hr>
-        <div style="white-space:nowrap"><%= link_to 'Sign Up', new_user_registration_path %></div>
-      </div>
-    </div>
-  </div>
-  
-  <div style="float:left">
-    <%= link_to_function 'Home', "$('#menu_home').show();", :onmouseover => "$('#menu_home').show();" %>
-    <div style="position:relative;">
-      <div id="menu_home" class="menu_dropdown_left" style="display:none">
-        <div><%= link_to 'Home', root_path %></div>
-        <div><%= link_to '&raquo;New'.html_safe, root_path %></div>
-        <hr>
-        <div><%= link_to 'About', about_path %></div>
-      </div>
-    </div>
-  </div>
-  <%= javascript_tag "hideOnMouseOut(['#menu_user_settings', '#menu_home']);" %>
-<% end %>
-
-<div style="clear:both"></div>
