@@ -1,51 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= [DEFAULT_APP_NAME, @title].compact.join(' - ').html_safe %></title>
-  <%= favicon_link_tag %>
-  <%= stylesheet_link_tag "application" %>
-	<%= javascript_include_tag "application" %>
-  <%= csrf_meta_tag %>
-
-  <% if false %>
-    <%= stylesheet_link_tag 'screen', :media => 'screen, projection' %>
-    <%= stylesheet_link_tag 'print', :media => 'print' %>
-    <!--[if IE]>
-      <%= stylesheet_link_tag 'ie', :media => 'screen, projection' %>
-    <![endif]-->
-    <%= stylesheet_link_tag 'application', :media => 'screen, projection' %>
-    <%= stylesheet_link_tag 'jquery-ui-1.8.10.custom' %>
-  
-    <%= javascript_include_tag "jquery-1.4.4.min", "jquery-ui-1.8.10.custom.min", "jquery.rails", "application" %>
-  
-    <%= csrf_meta_tag %>
-  <% end %>
-  
-  <%# TODO: Remove content_for :script do, then remove yield :script %>
-  <%= yield :script %>
+  <title><%= @title %></title>
+  <%= stylesheet_link_tag    "application" %>
+  <%= javascript_include_tag "application" %>
+  <%= csrf_meta_tags %>
 </head>
 <body>
-  <%= javascript_tag "var root_url='#{SITE_URL + '/'}';var auth_token='#{form_authenticity_token}';" %>
-  <div id="header" class="container" style="background-image: url(<%= SITE_URL %>/assets/brigham.png);">
-    <div id="version" style="position:relative;display:none">
-      <span style="position:absolute;top:-15px;left:98px;font-size:0.5em;font-variant:normal" class="quiet"><%= Elastic::VERSION::STRING %></span>
-    </div>
-    <%= image_tag('synchronize.png', :alt => '', :style => 'vertical-align:middle') %>
-    <%= link_to DEFAULT_APP_NAME, root_path, :style => 'text-decoration:none;color:#404040;', :onmouseover => "$('#version').show();", :onmouseout => "$('#version').hide();" %>
-  </div>
 
-  <div class="container" style="position:relative">
-    <div id="message">
-      <%= render :partial => 'layouts/message' %>
-    </div>
-  </div>
+<%= yield %>
 
-  <div id="menu" class="container">
-    <%= render :partial => 'layouts/menu' %>
-  </div>
-
-  <div id="content" class="container">
-    <%= yield %>
-  </div>
 </body>
 </html>
