@@ -1,3 +1,2 @@
 require 'digest/sha1'
 require 'systemu'
-require 'ruby-tracker'
