@@ -1,8 +1,0 @@
-require 'test_helper'
-
-class PeerInfoTest < ActiveSupport::TestCase
-  # Replace this with your real tests.
-  test "the truth" do
-    assert true
-  end
-end
