@@ -1,7 +1,8 @@
 require 'test_helper'
 
 class SegmentTest < ActiveSupport::TestCase
-  # test "the truth" do
-  #   assert true
-  # end
+  # Replace this with your real tests.
+  test "the truth" do
+    assert true
+  end
 end
